--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>NHL94 ScoreTracker</h1>
+
+<ul>
+
+  <li>
+    <%= link_to "Results", results_path %>
+  </li>
+  
+</ul>
