--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,25 +5,66 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 </head>
 <body>
 
 	<div class="page">
-
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
       
-      <div id="user_nav">
-		  <% if user_signed_in? %>
-		    Signed in as <%= current_user.email %>. Not you?
-		    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-		  <% else %>
-		    <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
-		  <% end %>
-      </div>
+      <nav class="navbar navbar-default navbar-static-top" role="navigation">
+        
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">NHL94</a>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><%= link_to "Results", results_path %></li>
+            <li><%= link_to "Teams", teams_path %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+                <li class="divider"></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+  
+          
+          <div id="user_nav" class="nav navbar-text navbar-right">
+      		  <% if user_signed_in? %>
+      		    Signed in as <%= current_user.email %>. Not you?
+      		    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+      		  <% else %>
+      		    <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
+      		  <% end %>
+          </div>
+        
+        </div>
+    
+      </nav>
 
+      <!--
+<p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+-->
+      <div class="container">
 			<%= yield %>
+      </div>
 			
 	</div>
 
