--- a/app/views/results/_form.html.erb
+++ b/app/views/results/_form.html.erb
@@ -1,10 +1,17 @@
 <%= simple_form_for @result do |f| %>
-  <%= f.input :date, as: :datetime  %>
-  <%= f.input :player1Id %>
-  <%= f.input :team1 %>
-  <%= f.input :team1Score %>
-  <%= f.input :player2Id %>
-  <%= f.input :team2 %>
-  <%= f.input :team2Score %>
-  <%= f.button :submit %>
+
+  <%= f.input :date, as: :string, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control form_datetime'} %>
+  <%= f.input :player1Id, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :team1, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :team1Score, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :player2Id, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :team2, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :team2Score, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  
+  <%= f.button :submit, :class => 'btn-primary'  %>
+  
+  <script type="text/javascript">
+    $(".form_datetime").datetimepicker({format: 'yyyy-mm-dd hh:ii'});
+  </script>
+  
 <% end %>
