--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,34 +1,36 @@
 <h1>List of Results</h1>
 
-<table border="1">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Player 1</th>
-      <th>Team 1</th>
-      <th>Score</th>
-      <th>Player 2</th>
-      <th>Team 2</th>
-      <th>Score</th>
-      <th>Options</th>
-    </tr>
-  </thead>
+<div class="table-responsive">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Player 1</th>
+        <th>Team 1</th>
+        <th>Score</th>
+        <th>Player 2</th>
+        <th>Team 2</th>
+        <th>Score</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+  
+    <% @results.each do |result| %>
+      <tr>
+        <td><%= link_to result.date, result %></td>
+        <td><%= result.player1Id %></td>
+        <td><%= result.team1 %></td>
+        <td><%= result.team1Score %></td>
+        <td><%= result.player2Id %></td>
+        <td><%= result.team2 %></td>
+        <td><%= result.team2Score %></td>
+        <td>
+          <%= link_to 'Edit', edit_result_path(result.id), :class => "btn btn-primary btn-xs" %>
+          <%= link_to 'Delete', result, :class => "btn btn-danger btn-xs", :method => 'delete' %>
+        </td>
+      </tr>
+    <% end -%>
+  </table>
+</div>
 
-  <% @results.each do |result| %>
-    <tr>
-      <td><%= link_to result.date, result %></td>
-      <td><%= result.player1Id %></td>
-      <td><%= result.team1 %></td>
-      <td><%= result.team1Score %></td>
-      <td><%= result.player2Id %></td>
-      <td><%= result.team2 %></td>
-      <td><%= result.team2Score %></td>
-      <td>
-        <%= link_to 'Edit', edit_result_path(result.id) %>
-        <%= link_to 'Delete', result, :method => 'delete' %>
-      </td>
-    </tr>
-  <% end -%>
-</table>
-
-<p><%= link_to 'New Result', new_result_path %></p>
+<p><%= link_to 'New Result', new_result_path, :class => "btn btn-primary", :role => "button" %></p>
