--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Results", results_path %></li>
             <li><%= link_to "Teams", teams_path %></li>
+            <li><%= link_to "Players", players_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
               <ul class="dropdown-menu">
