--- a/app/views/results/_form.html.erb
+++ b/app/views/results/_form.html.erb
@@ -1,12 +1,12 @@
 <%= simple_form_for @result do |f| %>
 
   <%= f.input :date, as: :string, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control form_datetime'} %>
-  <%= f.input :player1Id, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-  <%= f.input :team1, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-  <%= f.input :team1Score, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-  <%= f.input :player2Id, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-  <%= f.input :team2, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-  <%= f.input :team2Score, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :player1Id, collection: Player.all, label: 'Player 1', wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :team1, collection: Team.all, label: 'Team 1', wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :team1Score, label: 'Team 1 Score', wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :player2Id, collection: Player.all, label: 'Player 2', wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :team2, collection: Team.all, label: 'Team 2', wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+  <%= f.input :team2Score, label: 'Team 2 Score', wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
   
   <%= f.button :submit, :class => 'btn-primary'  %>
   
